2005-03-03  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : remove unnecessary null_ok rules.
	* generator/Ctor.cs : remove NullOk check.
	* gnome/Gnome.metadata : remove unnecessary null_ok rules.
	* gtk/Gtk.metadata : remove unnecessary null_ok rules.

2005-03-03  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs : use "as" instead of a cast in FromNative.
	* generator/Method.cs : remove the if/else checks for Object retvals.
	* glib/Object.cs : return null immediately for NULL in GetObject.

2005-03-03  Mike Kestner  <mkestner@novell.com>

	* generator/ClassBase.cs : add null checking to CallByName. No sense
	manually adding this for the ones that need it. Better to have g_criticals
	then NullRefExceptions anyway.
	* generator/MethodBody.cs : simplify out handle generation.
	[A babystep toward #86620]

2005-02-28  Dan Winship  <danw@novell.com>

	* gtk/Container.custom (ChildType): fix this to just call
	gtk_container_child_type().

	* gtk/glue/container.c (gtksharp_container_base_child_type): kill

2005-02-28  Mike Kestner  <mkestner@novell.com>

	* glib/Idle.cs : add locking on the source_handlers.
	* glib/Source.cs : add locking on the source_handlers.
	* glib/Timeout.cs : add locking on the source_handlers.

2005-02-25  Mike Kestner  <mkestner@novell.com>

	* glib/Source.cs : remove from the hash by key.
	* glib/Idle.cs : remove from the hash by key.

2005-02-23  Dan Winship  <danw@novell.com>

	* sources/gnomedb.patch: Patch over a bug in gnome-db-editor.h

	* gnomedb/gnomedb-api.raw: Regen

2005-02-23  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl (parseTypeToken): don't parse punctuation
	into the type name. [Fixes #72925]

	* gtk/gtk-api.raw: Regen, exposing the previously-broken
	AccelGroup.AccelActivate, AccelMap.Changed,
	ActionGroup.ConnectProxy, ActionGroup.DisconnectProxy,
	ActionGroup.PreActivate, ActionGroup.PostActivate, and
	Widget.EventAfter.

	* gtk/Gtk.metadata: Give proper names to the parameters of those