@@ -1,8 +1,12 @@
 2005-03-03  Mike Kestner  <mkestner@novell.com>
 
 	* gdk/Gdk.metadata : remove unnecessary null_ok rules.
-	* generator/Ctor.cs : remove NullOk check.
-	* gnome/Gnome.metadata : remove unnecessary null_ok rules.
+	* generator/Ctor.cs : don't add null params to CreateNativeObject call
+	for InterfaceGen or OpaqueGen in addition to ObjectGen.
+	* generator/Field.cs : simplify Object/Opaque gen.
+	* generator/Method.cs : remove OpaqueGen special casing.
+	* generator/OpaqueGen.cs : make FromNative null_ok robust.
+	* generator/Signal.cs : remove arg marshaling ClassBase special case.
 	* gtk/Gtk.metadata : remove unnecessary null_ok rules.
 
 2005-03-03  Mike Kestner  <mkestner@novell.com>
